using eigen to get euler angles but i think its overkill

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,10 @@ project(t265dump)
 
 # Find librealsense2 installed package
 find_package(realsense2 REQUIRED)
+find_package(Eigen3 REQUIRED)
 
 # Enable C++11
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 
 # Add the application sources to the target
