stasis control and wasd control

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,12 @@ add_executable(${PROJECT_NAME} main.cpp)
 
 # Link librealsense2 to the target
 target_link_libraries(${PROJECT_NAME} ${realsense2_LIBRARY})
+
+
+find_package(CURL REQUIRED)
+
+add_executable(stasis stasis.cpp)
+target_link_libraries(stasis ${realsense2_LIBRARY} ${CURL_LIBRARY})
+
+add_executable(wasd wasd.cpp)
+target_link_libraries(wasd ${CURL_LIBRARY})
