--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "files.associations": {
     "chrono": "cpp",
     "thread": "cpp",
-    "iomanip": "cpp"
+    "iomanip": "cpp",
+    "core": "cpp"
   }
 }
